# boss_position_auto

./: .gitignore  1 - 副本.xlsx  1.xlsx  2.xlsx  CHANGELOG_DEBUG_LOGGING.md  Cargo.toml  DEBUG_LOGGING.md  README.md  失败岗位记录.xlsx
src/: config.rs  error.rs  lib.rs  main.rs  utils.rs
src/boss/: auth.rs  browser.rs  cookies.rs  mod.rs
src/excel/: columns.rs  mod.rs  reader.rs  record.rs  row.rs  tests.rs  writer.rs
src/poster/: address.rs  basic_fields.rs  category.rs  dom.rs  dropdown.rs  education.rs  experience.rs  flow.rs  intern.rs  job_type.rs  misc.rs  mod.rs  requirements.rs  salary.rs  selectors.rs  tags.rs
src/poster/job_types/: campus.rs  fulltime.rs  internship.rs  mod.rs  parttime.rs
templates/: BOSS职位发布模板.xlsx
