[package]
name = "boss_auto"
version = "0.1.0"
edition = "2021"
description = "BOSS直聘自动化发布岗位工具"
rust-version = "1.70"

[dependencies]
# 浏览器自动化
rust_drission = { path = "../rust_drission" }

# Excel 读取和写入
calamine = "0.26"
csv = "1.3"
rust_xlsxwriter = "0.79"

# 配置与序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# 错误处理
thiserror = "1"
anyhow = "1"

# 工具
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
log = "0.4"
env_logger = "0.11"
simplelog = "0.12"
structopt = "0.3"
winreg = "0.52"

# 阻塞 HTTP（用于cookie验证等）
ureq = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
